tests/snapshots/render_snapshots__board_view_empty.snap
---
source: tests/render_snapshots.rs
expression: buf_to_string(&terminal)
---
╭────────────────────────╮
│                        │
│                        │
│                        │
│                        │
│                        │
│                        │
│                        │
│                        │
│                        │
│                        │
│                        │
│                        │
│                        │
│                        │
│                        │
│                        │
│                        │
│                        │
│                        │
│                        │
│                        │
│                        │
│        ▔▔              │
│          ▔▔▔▔          │
╰────────────────────────╯
