tests/snapshots/render_snapshots__game_over_overlay_new_best.snap
---
source: tests/render_snapshots.rs
expression: buf_to_string(&terminal)
---
╭ stats ───────────────╮
│score  0              │
│                      │
│l╭ game over ───────╮ │
│l│                  │ │
│ │     Game Over    │ │
╰─│                  │─╯
╭ │     NEW BEST!    │─╮
│ │                  │ │
│ │    score  360    │ │
│ │     level  1     │ │
╰─│     lines  0     │─╯
╭ │                  │─╮
│ │     r restart    │ │
│I│      q quit      │ │
│ ╰──────────────────╯ │
│OOOO                  │
│OOOO                  │
│                      │
╰──────────────────────╯
