tests/snapshots/render_snapshots__game_over_overlay_regular.snap
---
source: tests/render_snapshots.rs
expression: buf_to_string(&terminal)
---
╭ stats ───────────╮
│score  254        │
╭ game over ───────╮
│                  │
│     Game Over    │
│                  │
│    score  254    │
│     level  1     │
│     lines  0     │
│                  │
│     r restart    │
│      q quit      │
╰──────────────────╯
│                  │
╰──────────────────╯
